--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs-crash-course",
+  "name": "web-dev-newz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
